fixed unaligned social icons on media page in full content display mode

--- a/src/sass/node/_node-media.scss
+++ b/src/sass/node/_node-media.scss
@@ -6,7 +6,6 @@
 
         font-weight: 700;
         font-size: 15px;
-        line-height: 170%;
 
         .media-post-date-wrapper{
           display: inline-block;
@@ -17,6 +16,17 @@
           right: auto;
           float: right;
           display: inline-block;
+
+          li{
+            &>a{
+              overflow: visible;
+              &:after{
+                top: auto;
+                left: auto;
+                position: relative;
+              }
+            }
+          }
         }
 
         &:after{
